--- a/src/app/core/components/post/post.component.css
+++ b/src/app/core/components/post/post.component.css
@@ -2,12 +2,9 @@ a:link, a:hover, a:active {
   text-decoration: none;
 }
 
-.container {
-  text-align: center;
-}
-
 .module {
   margin: 20px 0;
+  text-align: center;
 }
 
 .module:hover {
@@ -51,7 +48,7 @@ a:link, a:hover, a:active {
     text-align: center;
   }
   .module {
-    margin: 10px 20px;
+    margin: 10px;
     padding: 5px 0;
     flex: 1 0 25%;
   }
